--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,19 @@
   /* padding: 12px;
   box-sizing: border-box; */
 }
+@font-face {
+  font-family: 'iconfont';  /* project id 1080485 */
+  src: url('//at.alicdn.com/t/font_1080485_989qle4uzld.eot');
+  src: url('//at.alicdn.com/t/font_1080485_989qle4uzld.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1080485_989qle4uzld.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1080485_989qle4uzld.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1080485_989qle4uzld.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1080485_989qle4uzld.svg#iconfont') format('svg');
+}
+.iconfont{
+  font-family:"iconfont" !important;
+  font-size:22px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
