--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   overflow-y: hidden;
-  background: url('./../../static/imgs/bg.jpg') no-repeat center;
+  background: url('./../../static/imgs/bg1.jpg') no-repeat center;
   background-size: 100% 100%;
   display: flex;
   flex-direction: column;
@@ -26,10 +26,10 @@
   color: #fff;
   font-weight: bolder;
   margin-bottom: 15px;
-  margin-top: -120px;
+  margin-top: 10px;
   letter-spacing: 10px;
-  color: green;
-  text-shadow: 0 0 10px #ccc;
+  color: #1890ff;
+  /* text-shadow: 0 0 10px #ccc; */
 }
 Input:-webkit-autofill { 
 	box-shadow: 0 0 0px 1000px #fff inset !important; 
