--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -1,5 +1,5 @@
 .home{
-  padding: 12px;
+  /* padding: 12px; */
   box-sizing: border-box;
 }
 
@@ -56,7 +56,7 @@
   margin-top: 30px;
   width: 100%;
   /* height: 900px; */
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
   background-color: #e7e7e7;
   border-top: 1px solid #eee;
   display: flex;
