--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -1,6 +1,6 @@
 .login{
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 120px);
   overflow-y: hidden;
   background: url('./../../static/imgs/bg2.jpg') no-repeat center;
   background-size: 100% 100%;
