--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -2,7 +2,22 @@
     width: 100%;
     height: 60px;
     /* background: g; */
+    padding: 0 30px;
+    box-sizing: border-box;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    background-color: #88cee8;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 1;
 }
+.main-title{
+    color: #3a97b2;
+    margin: 0;
+    font-size: 30px;
+    /* font-size: 21px; */
+    /* vertical-align: middle; */
+}
+
