--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,12 @@
 }
 @font-face {
   font-family: 'iconfont';  /* project id 1080485 */
-  src: url('//at.alicdn.com/t/font_1080485_bk6c05bbu7v.eot');
-  src: url('//at.alicdn.com/t/font_1080485_bk6c05bbu7v.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1080485_bk6c05bbu7v.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_1080485_bk6c05bbu7v.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1080485_bk6c05bbu7v.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1080485_bk6c05bbu7v.svg#iconfont') format('svg');
+  src: url('http://at.alicdn.com/t/font_1080485_bk6c05bbu7v.eot');
+  src: url('http://at.alicdn.com/t/font_1080485_bk6c05bbu7v.eot?#iefix') format('embedded-opentype'),
+  url('http://at.alicdn.com/t/font_1080485_bk6c05bbu7v.woff2') format('woff2'),
+  url('http://at.alicdn.com/t/font_1080485_bk6c05bbu7v.woff') format('woff'),
+  url('http://at.alicdn.com/t/font_1080485_bk6c05bbu7v.ttf') format('truetype'),
+  url('http://at.alicdn.com/t/font_1080485_bk6c05bbu7v.svg#iconfont') format('svg');
 }
 .iconfont{
   font-family:"iconfont" !important;
