--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ pre, form, fieldset, table, th, td {
     font-size:14px;
     margin:0px;
     padding:0px;
-    user-select: none;
+    /* user-select: none; */
     }
 html,body{
     height: 100%;
