--- a/src/pages/Home/index2.css
+++ b/src/pages/Home/index2.css
@@ -8,7 +8,7 @@
   overflow: auto;
   display: grid;
   /* box-sizing: content-box; */
-  gap: 15px 15px;
+  /* gap: 15px 15px; */
   padding: 15px;
   position: relative;
 }
@@ -22,7 +22,7 @@
 }
 
 .mudi-box{
-  border: 1px dashed #ddd;
+  /* border: 1px dashed #ddd; */
   border-radius: 8px;
 }
 
